--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,12 @@
 
     <string name="hello_world">Hello world!</string>
 
+    <string name="str_img1">Image1</string>
+    <string name="str_img2">Image2</string>
+    <string name="str_img3">Image3</string>
+    <string name="str_img4">Image4</string>
+    <string name="str_img5">Image5</string>
+
     <string name="action_settings">Settings</string>
+    <string name="title_activity_tutorial">Stevens Location Service</string>
 </resources>
