--- a/TestPrototype/app/src/main/res/values/strings.xml
+++ b/TestPrototype/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_example">Example action</string>
+    <string name="title_activity_welcome_screen">Welcome</string>
+    <string name="title_activity_login">Login</string>
 </resources>
