--- a/BeaconsPrototype/app/src/main/res/values/strings.xml
+++ b/BeaconsPrototype/app/src/main/res/values/strings.xml
@@ -5,7 +5,21 @@
     <string name="title_activity_detect_beacons">DetectBeacons</string>
     <string name="title_activity_message_board">MessageBoard</string>
     <string name="title_activity_message">MessageActivity</string>
-    <string name="host_Address">155.246.204.117:3000</string>
+    <string name="host_Address"> 155.246.204.88:3000</string>
     <string name="Message_Send_Button">Send</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_login">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
 </resources>
